syntax = "proto3";

option csharp_namespace = "AuthService";

service GrpcUser {
    rpc GetAllPUsers (GetAllRequest) returns (UserResponse);

}

message GetAllRequest {}

message GrpcUserModel {
    int32 UserId = 1;
    string identification = 2;
    string Name = 3;
    string LastName = 4;
    string Email = 5;
}

message UserResponse {
    repeated GrpcUserModel user = 1;
}